# hyperblow

./: '  .gitignore  .rustfmt.toml  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  test.torrent  xxxxx.txt
hyperblow/: Cargo.toml
hyperblow-cli/: Cargo.toml
hyperblow-cli/src/: arguments.rs  download_directory.rs  engine.rs  logger.rs  main.rs  utils.rs
hyperblow-cli/src/core/: magnet.rs  mod.rs  piece_assembler.rs  piece_picker.rs  piece_storage.rs  protocol.rs  state.rs  torrentFile.rs
hyperblow-cli/src/core/peer/: codec.rs  messages.rs  metadata.rs  mod.rs  piece.rs
hyperblow-cli/src/core/tracker/: announce_req_res.rs  connect_req_res.rs  mod.rs  scrape_req_res.rs
hyperblow-cli/src/tui/: command.rs  files.rs  mod.rs  mouse.rs  tui_state.rs  ui.rs
hyperblow-cli/src/tui/sections/: mod.rs
hyperblow-cli/src/tui/sections/tabs_section/: bandwidth_tab.rs  details_tab.rs  files_tab.rs  mod.rs  peers_tab.rs  pieces_tab.rs  trackers_tab.rs
hyperblow-cli/src/tui/sections/torrents_section/: mod.rs
hyperblow-desktop/: ideas.txt
hyperblow/src/: arguments.rs  details.rs  engine.rs  main.rs  utils.rs
hyperblow/src/core/: magnetURI.rs  mod.rs  state.rs  torrentFile.rs
hyperblow/src/core/peer/: block.rs  codec.rs  messages.rs  mod.rs  piece.rs
hyperblow/src/core/tracker/: announceReqRes.rs  announce_req_res.rs  connectReqRes.rs  connect_req_res.rs  error_res.rs  mod.rs  scrape_req_res.rs
hyperblow/src/parse/: mod.rs  parse.rs  percent_encoder.rs
hyperblow/src/tui/: files.rs  mod.rs  mouse.rs  tui_state.rs  ui.rs
hyperblow/src/tui/sections/tabs_section/: bandwidth_tab.rs  details_tab.rs  files_tab.rs  mod.rs  peers_tab.rs  pieces_tab.rs  trackers_tab.rs
hyperblow/src/tui/sections/torrents_section/: mod.rs
hyperblow/src/ui/: mod.rs  mouse.rs  tui_state.rs  ui.rs
hyperblow/src/ui/tabs/: details_tab.rs
hyperblow/src/work/: block.rs  file.rs  mod.rs  peer.rs  tracker.rs
libs/hyperblow/: Cargo.toml
libs/hyperblow/src/: lib.rs
libs/hyperblow/src/core/: mod.rs
libs/hyperblow/src/parser/: magnet_uri_parser.rs  mod.rs  torrent_parser.rs
libs/hyperblow/tests/: parser_integration.rs
libs/hyperblow_parser/: Cargo.toml
libs/hyperblow_parser/src/: magnet_uri_parser.rs  torrent_parser.rs
metadata_parser/: Cargo.toml  README.md
metadata_parser/src/: lib.rs
parser/: Cargo.toml
parser/src/: metadata.rs
src/: details.rs  main.rs  percent_encoder.rs  torrent_details.rs  torrent_parser.rs
src/parse/: mod.rs  parse.rs  torrent_parser.rs
src/ui/: files.rs  mod.rs  ui.rs  widgets.rs
src/work/: block.rs  file.rs  message.rs  mod.rs  peer.rs  start.rs  torrent_details.rs  tracker.rs
