[package]
name = "rustourent"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "0.2.3"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11.5"
sha-1 = "0.9.8"
percent-encoding = "2.1.0"
hyper = {version = "0.14.13", features = ["full"]}
tokio = { version = "1", features = ["full"] }


