[package]
name = "hyperblow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "0.2.3"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11.5"
sha-1 = "0.10.0"
percent-encoding = "2.1.0"
hyper = {version = "0.14.13", features = ["full"]}
tokio = { version = "1.16.1", features = ["full"] }
crossterm = "0.22.1"
tui = "0.17.0"
reqwest = "0.11.9"
bytes = "1.1.0"
byteorder = "1.4.3"
