[package]
name = "hyperblow-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
bytes = "1.11.1"
url = "2.5.8"
percent-encoding = "2.3.2"
clap = { version = "4.6.1", features = ["derive"] }
hyperblow = { path = "../libs/hyperblow" }
tokio = { version = "1.52.3", features = ["full"] }
rand = "0.10.1"
tokio-util = { version = "0.7.18", features = ["codec"] }
crossterm = "0.29.0"
paste = "1.0.15"
crossbeam = "0.8.4"
async-recursion = "1.1.1"
ratatui = { version = "0.30.0", features = ["crossterm_0_29"] }
thiserror = "2.0.18"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_bencode = "0.2.4"
futures-util = { version = "0.3.32", default-features = false, features = ["sink"] }

[features]
async_closure = []
