[package]
name = "hyperblow"
version = "0.1.0"
edition = "2021"

[dependencies]
#serde_bencode = "0.2.3"
#serde = "^1.0.0"
#serde_derive = "^1.0.0"
#serde_bytes = "0.11.5"
#sha-1 = "0.10.0"

#hyper = {version = "0.14.13", features = ["full"]}
#crossterm = "0.23.0"
#tui = "0.17.0"
#bytes = "1.1.0"
#byteorder = "1.4.3"
#futures = "0.3.19"
reqwest = "0.11.13"
percent-encoding = "2.2.0"
clap = { version = "4.0.32", features = ["derive"]}
hyperblow_parser = { path = "../libs/hyperblow_parser" }
tokio = { version = "1.23.0", features = ["full"] }
rand = "0.8.5"
