[package]
name = "hyperblow"
version = "0.1.0"
edition = "2021"

[dependencies]
#sha-1 = "0.10.0"
#hyper = {version = "0.14.13", features = ["full"]}
#crossterm = "0.23.0"
#tui = "0.17.0"

byteorder = "1.4.3"
bytes = "1.3.0"
reqwest = "0.11.13"
percent-encoding = "2.2.0"
clap = { version = "4.0.32", features = ["derive"]}
hyperblow_parser = { path = "../libs/hyperblow_parser" }
tokio = { version = "1.23.0", features = ["full"] }
rand = "0.8.5"
futures = "0.3.25"
