[package]
name = "hyperblow"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
bytes = "1.3.0"
reqwest = "0.11.13"
percent-encoding = "2.2.0"
clap = { version = "4.0.32", features = ["derive"]}
hyperblow_parser = { path = "../libs/hyperblow_parser" }
tokio = { version = "1.26.0", features = ["full"] }
rand = "0.8.5"
futures = "0.3.25"
tokio-util = "0.7.7"
async-trait = "0.1.63"
crossterm = "0.23"
paste = "1.0.12"
crossbeam = "0.8.2"
async-recursion = "1.0.2"
ratatui = "0.20.0"

[features]
async_closure = []

