[package]
name = "hyperblow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "^1.0.0"
sha-1 = "0.10.0"
serde = "^1.0.0"
serde_bytes = "0.11.5"
serde_bencode = "0.2.3"
magnet-url = "2.0.0"
