[package]
name = "hyperblow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.228"
sha-1 = "0.10.1"
serde = "1.0.228"
serde_bytes = "0.11.19"
serde_bencode = "0.2.4"
magnet-url = "3.0.0"
thiserror = "2.0.18"
percent-encoding = "2.3.2"
